; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_dell-smm-hwmon.c__i8k_get_temp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_dell-smm-hwmon.c__i8k_get_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smm_regs = type { i32, i32 }

@I8K_SMM_GET_TEMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @_i8k_get_temp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_i8k_get_temp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.smm_regs, align 4
  store i32 %0, i32* %2, align 4
  %4 = getelementptr inbounds %struct.smm_regs, %struct.smm_regs* %3, i32 0, i32 0
  %5 = load i32, i32* @I8K_SMM_GET_TEMP, align 4
  store i32 %5, i32* %4, align 4
  %6 = getelementptr inbounds %struct.smm_regs, %struct.smm_regs* %3, i32 0, i32 1
  %7 = load i32, i32* %2, align 4
  %8 = and i32 %7, 255
  store i32 %8, i32* %6, align 4
  %9 = call i64 @i8k_smm(%struct.smm_regs* %3)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %17

12:                                               ; preds = %1
  %13 = getelementptr inbounds %struct.smm_regs, %struct.smm_regs* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, 255
  %16 = sext i32 %15 to i64
  br label %17

17:                                               ; preds = %12, %11
  %18 = phi i64 [ %9, %11 ], [ %16, %12 ]
  %19 = trunc i64 %18 to i32
  ret i32 %19
}

declare dso_local i64 @i8k_smm(%struct.smm_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
